--- a/faq/static/styles/faq.less
+++ b/faq/static/styles/faq.less
@@ -59,23 +59,23 @@
   justify-content: center;
   align-items: center;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     height: calc(100vh - @headerHeight);
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     height: 500px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     height: 500px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     height: 300px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     height: 300px;
   }
 }
@@ -88,23 +88,23 @@
 
   color: @white;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 64px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 46px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 32px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 24px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 24px;
   }
 }
@@ -130,23 +130,23 @@
   line-height: 30px;
   letter-spacing: 1px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     padding: 120px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     padding: 120px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     padding: 120px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     padding: 120px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     padding: 120px;
   }
 }
@@ -188,23 +188,23 @@
   display: flex;
   flex-direction: column;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 30px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 25px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 25px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 25px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 25px;
   }
 }
@@ -221,23 +221,23 @@
   margin-top: 20px;
   margin-bottom: 25px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 20px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 20px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 20px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 20px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 20px;
   }
 }
@@ -259,23 +259,23 @@
   letter-spacing: 0.838px;
   margin-top: 30px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 30px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 25px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 25px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 25px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 25px;
   }
 }
