--- a/master/static/styles/master.less
+++ b/master/static/styles/master.less
@@ -56,23 +56,23 @@
   align-items: center;
   box-shadow: -200px 0 150px 0 @black inset;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     height: calc(100vh - @headerHeight);
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     height: 500px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     height: 500px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     height: 300px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     height: 300px;
   }
 }
@@ -107,26 +107,26 @@
   display: grid;
   gap: 40px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: 2fr 1fr;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
@@ -142,23 +142,23 @@
   display: grid;
   gap: 40px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: 1fr 1fr;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: 1fr;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: 1fr;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: 1fr;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: 1fr;
   }
 }
@@ -167,23 +167,23 @@
   display: grid;
   gap: 20px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: 1fr 1fr;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: 1fr;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: 1fr;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: 1fr;
   }
 }
@@ -199,27 +199,27 @@
   color: @white;
   padding: 10px 90px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 32px;
     justify-content: center;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     justify-content: space-around;
     font-size: 24px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     justify-content: space-around;
     font-size: 24px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     justify-content: space-around;
     font-size: 24px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     justify-content: space-around;
     font-size: 24px;
   }
@@ -231,19 +231,19 @@
   justify-content: flex-start;
   align-self: flex-start;
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     text-align: center;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     text-align: center;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     text-align: center;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     text-align: center;
   }
 }
@@ -267,24 +267,24 @@
   border-radius: 50px;
   cursor: pointer;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     margin-top: 40px;
     font-size: 32px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 24px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 24px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 16px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 16px;
   }
 }
@@ -317,13 +317,13 @@
   white-space: nowrap; /* Запрет переноса строк внутри контейнера */
 }
 
-@media @landscapePhonesMin and @landscapePhonesMax {
+@media only screen and @landscapePhonesMin and @landscapePhonesMax {
   .modal-content {
     white-space: normal;
   }
 }
 
-@media @landscapePhonesSmaller {
+@media only screen and @landscapePhonesSmaller {
   .modal-content {
     white-space: normal;
   }
