--- a/portfolio/static/styles/portfolio.less
+++ b/portfolio/static/styles/portfolio.less
@@ -69,23 +69,23 @@
 
   margin-bottom: 40px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     flex-direction: row;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     flex-direction: column;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     flex-direction: column;
   }
 }
@@ -108,19 +108,19 @@
   font-weight: 700;
   line-height: 110px;
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     margin-top: 40px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     margin-top: 40px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     margin-top: 40px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     margin-top: 40px;
   }
 }
@@ -132,23 +132,23 @@
 .second_block {
   margin-bottom: 40px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     display: flex;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     display: none;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     display: none;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     display: none;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     display: none;
   }
 }
@@ -164,26 +164,26 @@
 
   margin-bottom: 40px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
@@ -200,26 +200,26 @@
 
   margin-bottom: 50px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: 1fr 1fr;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
@@ -235,26 +235,26 @@
 
   margin-bottom: 40px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
   }
@@ -271,23 +271,23 @@
 
   margin-bottom: 40px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     flex-direction: row;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     flex-direction: column;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     flex-direction: column;
   }
 }
@@ -301,19 +301,19 @@
 }
 
 .sixth_block__right {
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     margin-top: 40px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     margin-top: 40px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     margin-top: 40px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     margin-top: 40px;
   }
 }
@@ -327,23 +327,23 @@
   justify-content: center;
   align-items: center;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     flex-direction: row;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     flex-direction: column;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     flex-direction: column;
   }
 }
@@ -361,19 +361,19 @@
 
   margin-left: 64px;
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     margin-top: 40px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     margin-top: 40px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     margin-top: 40px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     margin-top: 40px;
   }
 }
