--- a/main/static/styles/index.less
+++ b/main/static/styles/index.less
@@ -83,23 +83,23 @@
 .studio_name {
   letter-spacing: 1.24px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 80px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 80px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 60px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 45px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 30px;
   }
 }
@@ -107,23 +107,23 @@
 .bdsmr_hashtag {
   letter-spacing: .84px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 48px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 48px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 28px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 23px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 23px;
   }
 }
@@ -131,23 +131,23 @@
 .tattoo_studio {
   margin-bottom: 20px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 40px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 40px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 20px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 17px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 17px;
   }
 }
@@ -156,23 +156,23 @@
   color: @white;
   font-family: @ubuntu;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 32px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 32px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 13px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 13px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 13px;
   }
 }
@@ -195,23 +195,23 @@
   font-family: @roboto;
   background: @globalBackground;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     padding: 0 150px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     padding: 0 30px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 60px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 45px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 30px;
   }
 }
@@ -258,7 +258,7 @@
   position: relative;
 }
 
-@media (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   .slider {
     padding: 0 20px;
   }
@@ -377,27 +377,27 @@
   grid-column-gap: 25px;
   grid-row-gap: 25px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, 1fr);
   }
@@ -412,23 +412,23 @@
   margin-top: 10px;
   //grid-column: 3;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-column: 3;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-column: 2;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-column: 1;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-column: 1;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-column: 1;
   }
 }
@@ -519,7 +519,7 @@
 }
 
 /* Large Desktops */
-@media @largeDesktops {
+@media only screen and @largeDesktops {
   .masters_first {
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
@@ -542,7 +542,7 @@
 }
 
 /* Medium Desktops */
-@media @mediumDesktopsMin and @mediumDesktopsMax {
+@media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
   .masters_first {
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
@@ -575,14 +575,14 @@
 }
 
 /* Small Desktops */
-@media @smallDesktopsMin and @smallDesktopsMax {
+@media only screen and @smallDesktopsMin and @smallDesktopsMax {
   .masters_first div {
     grid-column: span 12;
   }
 }
 
 /* Landscape Phones */
-@media @landscapePhonesMin and @landscapePhonesMax,
+@media only screen and @landscapePhonesMin and @landscapePhonesMax,
 @landscapePhonesSmaller {
   .masters_first div {
     grid-column: span 12;
@@ -617,27 +617,27 @@
   grid-template-rows: 1fr;
   gap: 25px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 1fr;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 1fr;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 1fr;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 1fr;
   }
@@ -706,23 +706,23 @@
   align-items: center;
   padding-bottom: 160px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     flex-direction: row;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     flex-direction: column;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     flex-direction: column;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     flex-direction: column;
   }
 }
@@ -733,25 +733,25 @@
 
   letter-spacing: 1px;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     font-size: 16px;
     line-height: 20px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     font-size: 28px;
     line-height: 40px;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     font-size: 28px;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     font-size: 28px;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     font-size: 28px;
   }
 }
@@ -781,22 +781,22 @@
   justify-content: flex-start;
   align-items: center;
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     margin: 25px 0;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     margin: 25px 0;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     margin: 25px 0;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     margin: 25px 0;
   }
 }
@@ -852,24 +852,24 @@
 }
 
 .right {
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
     width: 700px;
     height: 553px;
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     display: none;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     display: none;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     display: none;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     display: none;
   }
 }
@@ -879,22 +879,22 @@
   height: 100%;
   filter: grayscale(100%) invert(100%) contrast(67%);
 
-  @media @largeDesktops {
+  @media only screen and @largeDesktops {
   }
 
-  @media @mediumDesktopsMin and @mediumDesktopsMax {
+  @media only screen and @mediumDesktopsMin and @mediumDesktopsMax {
     display: none;
   }
 
-  @media @smallDesktopsMin and @smallDesktopsMax {
+  @media only screen and @smallDesktopsMin and @smallDesktopsMax {
     display: none;
   }
 
-  @media @landscapePhonesMin and @landscapePhonesMax {
+  @media only screen and @landscapePhonesMin and @landscapePhonesMax {
     display: none;
   }
 
-  @media @landscapePhonesSmaller {
+  @media only screen and @landscapePhonesSmaller {
     display: none;
   }
 }
