--- a/static/COMPILED/styles/base.css
+++ b/static/COMPILED/styles/base.css
@@ -53,7 +53,7 @@ header {
   width: 100%;
   background: #040404;
 }
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   header {
     height: 75px;
     display: flex;
@@ -62,7 +62,7 @@ header {
     flex-direction: row;
   }
 }
-@media (min-width: 980px) and (max-width: 1199px) {
+@media only screen and (min-width: 980px) and (max-width: 1199px) {
   header {
     height: 100%;
     display: flex;
@@ -71,7 +71,7 @@ header {
     flex-direction: column;
   }
 }
-@media (min-width: 769px) and (max-width: 979px) {
+@media only screen and (min-width: 769px) and (max-width: 979px) {
   header {
     height: 100%;
     display: flex;
@@ -80,7 +80,7 @@ header {
     flex-direction: column;
   }
 }
-@media (min-width: 640px) and (max-width: 768px) {
+@media only screen and (min-width: 640px) and (max-width: 768px) {
   header {
     height: 100%;
     display: flex;
@@ -89,7 +89,7 @@ header {
     flex-direction: column;
   }
 }
-@media (max-width: 639px) {
+@media only screen and (max-width: 639px) {
   header {
     height: 100%;
     display: flex;
@@ -102,52 +102,52 @@ header {
   display: flex;
   align-items: center;
 }
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .logo {
     margin-left: 42px;
   }
 }
-@media (min-width: 980px) and (max-width: 1199px) {
+@media only screen and (min-width: 980px) and (max-width: 1199px) {
   .logo {
     margin-top: 40px;
   }
 }
-@media (min-width: 769px) and (max-width: 979px) {
+@media only screen and (min-width: 769px) and (max-width: 979px) {
   .logo {
     margin-top: 40px;
   }
 }
-@media (min-width: 640px) and (max-width: 768px) {
+@media only screen and (min-width: 640px) and (max-width: 768px) {
   .logo {
     margin-top: 40px;
   }
 }
-@media (max-width: 639px) {
+@media only screen and (max-width: 639px) {
   .logo {
     margin-top: 40px;
   }
 }
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .logo img {
     width: 210px;
   }
 }
-@media (min-width: 980px) and (max-width: 1199px) {
+@media only screen and (min-width: 980px) and (max-width: 1199px) {
   .logo img {
     width: 310px;
   }
 }
-@media (min-width: 769px) and (max-width: 979px) {
+@media only screen and (min-width: 769px) and (max-width: 979px) {
   .logo img {
     width: 310px;
   }
 }
-@media (min-width: 640px) and (max-width: 768px) {
+@media only screen and (min-width: 640px) and (max-width: 768px) {
   .logo img {
     width: 310px;
   }
 }
-@media (max-width: 639px) {
+@media only screen and (max-width: 639px) {
   .logo img {
     width: 310px;
   }
@@ -163,10 +163,10 @@ header {
   list-style-type: none;
   color: #FFFFFF;
   font-family: 'Ubuntu', sans-serif;
-  font-size: 30px;
+  font-size: 18px;
   letter-spacing: 1px;
 }
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .buttons-list {
     display: flex;
     flex-direction: row;
@@ -174,12 +174,13 @@ header {
     align-items: center;
   }
 }
-@media (min-width: 980px) and (max-width: 1199px) {
+@media only screen and (min-width: 980px) and (max-width: 1199px) {
   .buttons-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -187,12 +188,13 @@ header {
     transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
-@media (min-width: 769px) and (max-width: 979px) {
+@media only screen and (min-width: 769px) and (max-width: 979px) {
   .buttons-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -200,12 +202,13 @@ header {
     transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
-@media (min-width: 640px) and (max-width: 768px) {
+@media only screen and (min-width: 640px) and (max-width: 768px) {
   .buttons-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -213,12 +216,13 @@ header {
     transition: max-height 0.7s ease, visibility 0.3s ease, opacity 0.7s ease, margin-bottom 0.5s ease;
   }
 }
-@media (max-width: 639px) {
+@media only screen and (max-width: 639px) {
   .buttons-list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-size: 30px;
     visibility: hidden;
     min-height: 0;
     max-height: 0;
@@ -233,56 +237,56 @@ header {
   opacity: 1;
   margin-bottom: 40px;
 }
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .menu-toggle {
     display: none;
   }
 }
-@media (min-width: 980px) and (max-width: 1199px) {
+@media only screen and (min-width: 980px) and (max-width: 1199px) {
   .menu-toggle {
     display: block;
     transition: transform 0.5s ease;
   }
 }
-@media (min-width: 769px) and (max-width: 979px) {
+@media only screen and (min-width: 769px) and (max-width: 979px) {
   .menu-toggle {
     display: block;
     transition: transform 0.5s ease;
   }
 }
-@media (min-width: 640px) and (max-width: 768px) {
+@media only screen and (min-width: 640px) and (max-width: 768px) {
   .menu-toggle {
     display: block;
     transition: transform 0.5s ease;
   }
 }
-@media (max-width: 639px) {
+@media only screen and (max-width: 639px) {
   .menu-toggle {
     display: block;
     transition: transform 0.5s ease;
   }
 }
-@media (min-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   .buttons-list a:not(:first-child) {
     margin-left: 45px;
   }
 }
-@media (min-width: 980px) and (max-width: 1199px) {
+@media only screen and (min-width: 980px) and (max-width: 1199px) {
   .buttons-list a:not(:first-child) {
     margin-top: 45px;
   }
 }
-@media (min-width: 769px) and (max-width: 979px) {
+@media only screen and (min-width: 769px) and (max-width: 979px) {
   .buttons-list a:not(:first-child) {
     margin-top: 45px;
   }
 }
-@media (min-width: 640px) and (max-width: 768px) {
+@media only screen and (min-width: 640px) and (max-width: 768px) {
   .buttons-list a:not(:first-child) {
     margin-top: 45px;
   }
 }
-@media (max-width: 639px) {
+@media only screen and (max-width: 639px) {
   .buttons-list a:not(:first-child) {
     margin-top: 45px;
   }
