--- a/master/templates/master/html/master.html
+++ b/master/templates/master/html/master.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link type="image/x-icon" href="../static/source/common/logo.ico" rel="shortcut icon">
 {% endblock %}
 
 {% block css %}
